# chains

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/chains/: expose.hpp  module.hpp  module_group.hpp  module_host.hpp  parameter.hpp  processor_group.hpp  processor_host.hpp  value.hpp
include/chains/dsp/: phasor.hpp
include/chains/groups/: parallel.hpp  recursive.hpp  serial.hpp  split.hpp
include/chains/modules/: accumulator.hpp  biquad.hpp  crossfade.hpp  delay.hpp  gain.hpp  ones.hpp  phasor.hpp  probe.hpp  wire.hpp
include/chains/support/: can_apply.hpp  estd.hpp  type_is_in_pack.hpp
src/: catch-main.cpp  chains.cpp  simple.cpp
src/experiments/: parameter.cpp  process.cpp
